XMLtoCSV/objects/unpackaged/objects/PCYC_Linked_Physician__c.object
<CustomObject>
    <description>Holds connection between Non-Physician and Physician. Each relationship is connected to one of physician addresses.</description>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>The Mobile ID field allows for the creation of records on mobile device.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_Account_Credentails__c</fullName>
        <formula>TEXT(PCYC_Account__r.Credentials_vod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Physician Credentials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Account__c</fullName>
        <description>Non-Physician Person Account</description>
        <label>Non Physician</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account does not match filter criteria. Please choose Non-Physician Account.</errorMessage>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.PCYC_Is_Physician_calc__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Please choose Non-Physician Account.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Linked Physicians</relationshipLabel>
        <relationshipName>PCYC_Linked_Physicians</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PCYC_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>One of Physician&apos;s addresses</description>
        <label>Address</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Address does not match filter criteria. Please choose one of Physician&apos;s addresses.</errorMessage>
            <filterItems>
                <field>Address_vod__c.Account_vod__c</field>
                <operation>equals</operation>
                <valueField>$Source.PCYC_Physician__c</valueField>
            </filterItems>
            <infoMessage>Please choose one of Physician&apos;s addresses.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Linked Physicians</relationshipLabel>
        <relationshipName>PCYC_Linked_Physicians</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCYC_External_Id__c</fullName>
        <description>External ID - concatenation of Non-Physician ID and Physician ID and address ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_External_Id_calc__c</fullName>
        <description>External ID (formula) - concatenation of Non-Physician ID and Physician ID and address ID</description>
        <formula>PCYC_Account__c &amp; &apos;_&apos; &amp;  PCYC_Physician__c &amp; &apos;_&apos; &amp; PCYC_Address__c</formula>
        <label>External ID (calc)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Is_Physician_calc__c</fullName>
        <description>Determines if credentials are valid for physicians. List of valid credentials is stored in Custom Setting: Linked Physician Settings</description>
        <formula>PCYC_Physician__r.PCYC_Is_Physician_calc__c</formula>
        <label>Is Physician?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Physician_Credentials__c</fullName>
        <formula>Text(PCYC_Physician__r.Credentials_vod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physician Credentials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Physician__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Physician Person Account</description>
        <label>Physician</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.PCYC_Is_Physician_calc__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Non Physician List</relationshipLabel>
        <relationshipName>PCYC_Linked_Accounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Linked Physician</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LP#{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Physicians</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ValidateLinkedRecord</fullName>
        <active>true</active>
        <description>ValidateLinkedRecord</description>
        <errorConditionFormula>OR (  AND(PCYC_Account__r.IsPersonAccount,  PCYC_Account__r.PCYC_Is_Physician_calc__c), 
AND(PCYC_Physician__r.IsPersonAccount,
Not(PCYC_Physician__r.PCYC_Is_Physician_calc__c))
)</errorConditionFormula>
        <errorMessage>Please select Non Physician and Physician records properly</errorMessage>
    </validationRules>
</CustomObject>